--- a/composer.json
+++ b/composer.json
@@ -23,13 +23,10 @@
     "config": {
         "sort-packages": true
     },
-    "repositories": [
-        {"type": "vcs", "url": "https://github.com/weierophinney/zend-expressive-session.git"}
-    ],
     "require": {
         "php": "^7.1",
         "http-interop/http-middleware": "^0.4.1",
-        "zendframework/zend-expressive-session": "dev-master"
+        "zendframework/zend-expressive-session": "^0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0.9",
