Require that phpspec/prophecy is at least v1.7.2

--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,9 @@
         "phpunit/phpunit": "^6.0.9",
         "zendframework/zend-coding-standard": "~1.0.0"
     },
+    "conflict": {
+        "phpspec/prophecy": "<1.7.2"
+    },
     "autoload": {
         "psr-4": {
             "Zend\\Expressive\\Flash\\": "src/"
