--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "name": "zendframework/zend-expressive-flash",
     "description": "Flash messages for PSR-7 applications using zend-expressive-session",
-    "type": "library",
     "license": "BSD-3-Clause",
     "keywords": [
         "expressive",
@@ -11,17 +10,27 @@
         "psr-15",
         "session",
         "zf",
-        "zendframework"
+        "zendframework",
+        "zend-expressive"
     ],
+    "config": {
+        "sort-packages": true
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        },
+        "zf": {
+            "config-provider": "Zend\\Expressive\\Flash\\ConfigProvider"
+        }
+    },
     "support": {
         "docs": "https://docs.zendframework.com/zend-expressive-flash/",
         "issues": "https://github.com/zendframework/zend-expressive-flash/issues",
         "source": "https://github.com/zendframework/zend-expressive-flash",
+        "rss": "https://github.com/zendframework/zend-expressive-flash/releases.atom",
         "slack": "https://zendframework-slack.herokuapp.com",
         "forum": "https://discourse.zendframework.com/c/questions/expressive"
-    },
-    "config": {
-        "sort-packages": true
     },
     "require": {
         "php": "^7.1",
@@ -29,7 +38,7 @@
         "zendframework/zend-expressive-session": "^0.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0.9",
+        "phpunit/phpunit": "^6.4.3",
         "zendframework/zend-coding-standard": "~1.0.0"
     },
     "conflict": {
@@ -43,14 +52,6 @@
     "autoload-dev": {
         "psr-4": {
             "ZendTest\\Expressive\\Flash\\": "test/"
-        }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0-dev"
-        },
-        "zf": {
-            "config-provider": "Zend\\Expressive\\Flash\\ConfigProvider"
         }
     },
     "scripts": {
