--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,16 @@
     "config": {
         "sort-packages": true
     },
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/webimpress/zend-expressive-session.git"
+        }
+    ],
     "require": {
         "php": "^7.1",
-        "http-interop/http-middleware": "^0.4.1",
-        "zendframework/zend-expressive-session": "^0.1"
+        "http-interop/http-server-middleware": "^1.0.1",
+        "zendframework/zend-expressive-session": "dev-feature/psr-15 as 0.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0.9",
