--- a/composer.json
+++ b/composer.json
@@ -23,19 +23,13 @@
     "config": {
         "sort-packages": true
     },
-    "repositories": [
-        {
-            "type": "git",
-            "url": "https://github.com/webimpress/zend-expressive-session.git"
-        }
-    ],
     "require": {
         "php": "^7.1",
         "http-interop/http-server-middleware": "^1.0.1",
-        "zendframework/zend-expressive-session": "dev-feature/psr-15 as 0.2"
+        "zendframework/zend-expressive-session": "^1.0.0-dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0.9",
+        "phpunit/phpunit": "^6.5.3",
         "zendframework/zend-coding-standard": "~1.0.0"
     },
     "conflict": {
