--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0-dev"
+            "dev-master": "0.1.x-dev",
+            "dev-release-1.0.0": "1.0.x-dev"
         },
         "zf": {
             "config-provider": "Zend\\Expressive\\Flash\\ConfigProvider"
