--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "require": {
         "php": "^7.1",
         "psr/http-server-middleware": "^1.0",
-        "zendframework/zend-expressive-session": "^1.0.0-dev"
+        "zendframework/zend-expressive-session": "^1.0.0alpha1 || ^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5.3",
