--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "zendframework/zend-expressive-flash",
-    "description": "Flash messages for PSR-7 applications using zend-expressive-session",
+    "description": "Flash messages for PSR-7 and PSR-15 applications using zend-expressive-session",
     "license": "BSD-3-Clause",
     "keywords": [
         "expressive",
@@ -24,7 +24,7 @@
     "require": {
         "php": "^7.1",
         "psr/http-server-middleware": "^1.0",
-        "zendframework/zend-expressive-session": "^1.0.0alpha1 || ^1.0"
+        "zendframework/zend-expressive-session": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0.2",
@@ -48,8 +48,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.1.x-dev",
-            "dev-release-1.0.0": "1.0.x-dev"
+            "dev-master": "1.0.x-dev",
+            "dev-develop": "1.1.x-dev"
         },
         "zf": {
             "config-provider": "Zend\\Expressive\\Flash\\ConfigProvider"
